# Wallora

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  tauri.conf.json  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1753774055409-b9e3710a47de6.mjs
.github/workflows/: build.yml
capabilities/: default.json
public/: date-widget.html  wallpaper.html
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/commands/: date_widget.rs  files.rs  mod.rs  wallpaper.rs  window.rs
src-tauri/src/platform/: linux.rs  windows.rs
src-tauri/src/state/: mod.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/types/: mod.rs
src-tauri/src/utils/: file_utils.rs
src/apps/: App.tsx  index.css
src/apps/components/: DateWidget.tsx  WallpaperManager.tsx
src/apps/types/: wallpaper.ts
src/assets/fonts/: .gitkeep
src/components/: DateWidget.tsx  FileSelector.tsx  SetupScreen.tsx  TrayMenu.tsx  WallpaperManager.tsx
src/tauri/: main.rs
src/tauri/commands/: app_state.rs  date_widget.rs  wallpaper.rs
src/tauri/platform/: macos.rs
src/tauri/state/: mod.rs
src/tauri/tray/: mod.rs
src/tauri/types/: mod.rs
src/tauri/utils/: file_utils.rs
src/types/: wallpaper.ts
