[[bin]]
name = "wallora"
path = "src/tauri/main.rs"

[package]
name = "wallora"
version = "1.3.3"
description = "Wallora brings beautiful wallpapers and a clock overlay to your desktop."
authors = ["riteshk-611"]
edition = "2024"
license = "AGPL-3.0"
repository = "https://github.com/riteshk-611/wallora"
documentation = "https://github.com/riteshk-611/wallora#readme"
keywords = ["wallpaper", "desktop", "customization", "video-wallpaper", "date-widget"]
rust-version = "1.88"
build = "scripts/build.rs"

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
tauri = { version = "2.6", features = [ "protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-single-instance = "2.3"
tauri-plugin-shell = "2.3"
tauri-plugin-fs = "2.3"
tauri-plugin-dialog = "2.3"
tauri-plugin-autostart = "2.3"
tauri-plugin-store = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt"] }
walkdir = "2.5"
urlencoding = "2.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "errhandlingapi", "wincon"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true   
