[package]
name = "wallpaper-manager"
version = "1.0.0"
description = "A modern wallpaper manager with video support"
authors = ["You"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
tauri = { version = "2.6", features = [ "protocol-asset", "tray-icon", "image-png", "webview-data-url"] }
tauri-plugin-shell = "2.3"
tauri-plugin-fs = "2.3"
tauri-plugin-dialog = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
walkdir = "2.5"
urlencoding = "2.1"
log = "0.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "errhandlingapi", "wincon"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
